[gd_scene load_steps=48 format=3 uid="uid://bghsjbsbn2dsc"]

[ext_resource type="Theme" uid="uid://3ecs1h65o5cx" path="res://styles/main.tres" id="1_boyg6"]
[ext_resource type="Script" uid="uid://dsc24jpwc6k87" path="res://game.gd" id="2_e36ub"]
[ext_resource type="Resource" uid="uid://du6os6cwjers" path="res://ink/songbearer.ink" id="3_rvswv"]
[ext_resource type="PackedScene" uid="uid://ctt4qbftwu0xg" path="res://game_subviewport.tscn" id="4_hve3p"]
[ext_resource type="Texture2D" uid="uid://c8eskjch3eiph" path="res://shaders/hatching.png" id="5_e8heu"]
[ext_resource type="PackedScene" uid="uid://crgks6cetmi7u" path="res://menus/main_menu.tscn" id="11_215e1"]
[ext_resource type="AudioStream" uid="uid://pra1onf24gng" path="res://game_sounds/main.mp3" id="11_mfdv2"]
[ext_resource type="PackedScene" uid="uid://wh7sy6ma76h1" path="res://intro.tscn" id="15_rvswv"]
[ext_resource type="Script" uid="uid://ct8qc3ehjq1kj" path="res://game_sounds/music_player.gd" id="17_xex6t"]
[ext_resource type="AudioStream" uid="uid://isdbrp3oc6hj" path="res://game_sounds/echoes.mp3" id="18_aa0lp"]
[ext_resource type="AudioStream" uid="uid://cwm26p5jd6vsr" path="res://game_sounds/silence.tres" id="19_iu0sx"]

[sub_resource type="Gradient" id="Gradient_rvswv"]
offsets = PackedFloat32Array(0.2, 0.471483, 1)
colors = PackedColorArray(0.047418, 0.047418, 0.047418, 1, 0.252966, 0.252966, 0.252966, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1nl01"]
gradient = SubResource("Gradient_rvswv")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="VisualShaderNodeTexture" id="VisualShaderNodeTexture_1gu75"]
expanded_output_ports = [0]
source = 5
texture = SubResource("GradientTexture2D_1nl01")

[sub_resource type="VisualShaderNodeTexture2DParameter" id="VisualShaderNodeTexture2DParameter_bivho"]
parameter_name = "center_circle"

[sub_resource type="VisualShaderNodeTexture" id="VisualShaderNodeTexture_qs1q0"]
expanded_output_ports = [0]
source = 5
texture = SubResource("GradientTexture2D_1nl01")

[sub_resource type="VisualShaderNodeSmoothStep" id="VisualShaderNodeSmoothStep_qs1q0"]
default_input_values = [0, 1.0, 1, 0.0, 2, 0.5]

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_q4o1x"]
expanded_output_ports = [0]
input_name = "screen_uv"

[sub_resource type="VisualShaderNodeFloatParameter" id="VisualShaderNodeFloatParameter_1gu75"]
parameter_name = "light_level"
default_value_enabled = true
default_value = 1.0

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_qs1q0"]
input_name = "time"

[sub_resource type="VisualShaderNodeFloatFunc" id="VisualShaderNodeFloatFunc_1nl01"]
function = 1

[sub_resource type="VisualShaderNodeRemap" id="VisualShaderNodeRemap_bivho"]
default_input_values = [1, -1.0, 2, 1.0, 3, 0.8, 4, 1.2]

[sub_resource type="VisualShaderNodeVectorOp" id="VisualShaderNodeVectorOp_1nl01"]
default_input_values = [0, Vector2(0, 0), 1, Vector2(0, 0)]
op_type = 0
operator = 2

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_1gu75"]
constant = 0.5

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_qs1q0"]
operator = 2

[sub_resource type="VisualShaderNodeUVFunc" id="VisualShaderNodeUVFunc_qs1q0"]
default_input_values = [1, Vector2(0, 0), 2, Vector2(0.5, 0.5)]

[sub_resource type="VisualShaderNodeInput" id="VisualShaderNodeInput_1nl01"]
input_name = "time"

[sub_resource type="VisualShaderNodeFloatFunc" id="VisualShaderNodeFloatFunc_1gu75"]
function = 1

[sub_resource type="VisualShaderNodeFloatFunc" id="VisualShaderNodeFloatFunc_bivho"]
function = 0

[sub_resource type="VisualShaderNodeVectorCompose" id="VisualShaderNodeVectorCompose_vhiiu"]
op_type = 0

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_q4o1x"]
default_input_values = [0, 0.0, 1, 0.01]
operator = 2

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_uste5"]
default_input_values = [0, 0.0, 1, 1.0]
operator = 2

[sub_resource type="VisualShaderNodeTexture" id="VisualShaderNodeTexture_1nl01"]
expanded_output_ports = [0]
source = 5
texture = SubResource("GradientTexture2D_1nl01")

[sub_resource type="VisualShaderNodeUVFunc" id="VisualShaderNodeUVFunc_1gu75"]
default_input_values = [1, Vector2(0, 0), 2, Vector2(0.5, 0.5)]

[sub_resource type="VisualShaderNodeVectorCompose" id="VisualShaderNodeVectorCompose_bivho"]
op_type = 0

[sub_resource type="VisualShaderNodeFloatOp" id="VisualShaderNodeFloatOp_vhiiu"]
default_input_values = [0, 1.0, 1, 0.0]

[sub_resource type="VisualShaderNodeRemap" id="VisualShaderNodeRemap_qs1q0"]
default_input_values = [1, 0.5, 2, 0.0, 3, 1.0, 4, 0.0]

[sub_resource type="VisualShaderNodeSmoothStep" id="VisualShaderNodeSmoothStep_1nl01"]

[sub_resource type="VisualShaderNodeFloatParameter" id="VisualShaderNodeFloatParameter_qs1q0"]
parameter_name = "growth"
default_value_enabled = true

[sub_resource type="VisualShaderNodeUVFunc" id="VisualShaderNodeUVFunc_p0yr5"]
default_input_values = [1, Vector2(1, 1), 2, Vector2(0.5, 0.5)]
function = 1

[sub_resource type="VisualShaderNodeFloatParameter" id="VisualShaderNodeFloatParameter_ea4nj"]
parameter_name = "aspect_ratio"
default_value_enabled = true
default_value = 2.0

[sub_resource type="VisualShaderNodeVectorCompose" id="VisualShaderNodeVectorCompose_6xak5"]
default_input_values = [0, 2.0, 1, 1.0, 2, 0.0]
op_type = 0

[sub_resource type="VisualShaderNodeTexture2DParameter" id="VisualShaderNodeTexture2DParameter_rl4q8"]
parameter_name = "hatching"
color_default = 1
texture_repeat = 1

[sub_resource type="VisualShader" id="VisualShader_mfdv2"]
resource_local_to_scene = true
code = "shader_type canvas_item;
render_mode blend_mix, unshaded;

uniform float aspect_ratio = 2.0;
uniform sampler2D hatching : hint_default_black, repeat_enable;
uniform float light_level = 1.0;
uniform float growth = 0.0;
uniform sampler2D center_circle;



void fragment() {
// Input:3
	vec2 n_out3p0 = SCREEN_UV;


// FloatParameter:7
	float n_out7p0 = aspect_ratio;


// VectorCompose:8
	float n_in8p1 = 1.00000;
	vec2 n_out8p0 = vec2(n_out7p0, n_in8p1);


// FloatConstant:41
	float n_out41p0 = 0.500000;


// VectorOp:40
	vec2 n_out40p0 = n_out8p0 * vec2(n_out41p0);


// UVFunc:6
	vec2 n_in6p2 = vec2(0.50000, 0.50000);
	vec2 n_out6p0 = (n_out3p0 - n_in6p2) * n_out40p0 + n_in6p2;


// Input:44
	float n_out44p0 = TIME;


// FloatOp:48
	float n_in48p1 = 0.01000;
	float n_out48p0 = n_out44p0 * n_in48p1;


// VectorCompose:52
	float n_in52p1 = 0.00000;
	vec2 n_out52p0 = vec2(n_out48p0, n_in52p1);


// UVFunc:51
	vec2 n_in51p2 = vec2(0.50000, 0.50000);
	vec2 n_out51p0 = n_in51p2 * n_out52p0 + n_out6p0;


	vec4 n_out50p0;
// Texture2D:50
	n_out50p0 = texture(hatching, n_out51p0);
	float n_out50p1 = n_out50p0.r;


// VectorCompose:47
	float n_in47p0 = 0.00000;
	vec2 n_out47p0 = vec2(n_in47p0, n_out48p0);


// UVFunc:43
	vec2 n_in43p2 = vec2(0.50000, 0.50000);
	vec2 n_out43p0 = n_in43p2 * n_out47p0 + n_out6p0;


	vec4 n_out11p0;
// Texture2D:11
	n_out11p0 = texture(hatching, n_out43p0);
	float n_out11p1 = n_out11p0.r;


// FloatOp:53
	float n_out53p0 = n_out50p1 + n_out11p1;


// FloatParameter:31
	float n_out31p0 = light_level;


// FloatParameter:56
	float n_out56p0 = growth;


	float n_out39p0;
// Remap:39
	float n_in39p1 = -1.00000;
	float n_in39p2 = 1.00000;
	float n_in39p3 = 0.80000;
	float n_in39p4 = 1.20000;
	{
		float __input_range = n_in39p2 - n_in39p1;
		float __output_range = n_in39p4 - n_in39p3;
		n_out39p0 = n_in39p3 + __output_range * ((n_out56p0 - n_in39p1) / __input_range);
	}


// FloatOp:42
	float n_out42p0 = n_out31p0 * n_out39p0;


	vec4 n_out13p0;
// Texture2D:13
	n_out13p0 = texture(center_circle, n_out6p0);
	float n_out13p1 = n_out13p0.r;


// SmoothStep:27
	float n_in27p1 = 0.00000;
	float n_out27p0 = smoothstep(n_out42p0, n_in27p1, n_out13p1);


	float n_out54p0;
// Remap:54
	float n_in54p1 = 0.50000;
	float n_in54p2 = 0.00000;
	float n_in54p3 = 1.00000;
	float n_in54p4 = 0.00000;
	{
		float __input_range = n_in54p2 - n_in54p1;
		float __output_range = n_in54p4 - n_in54p3;
		n_out54p0 = n_in54p3 + __output_range * ((n_out27p0 - n_in54p1) / __input_range);
	}


// SmoothStep:55
	float n_in55p0 = 0.00000;
	float n_out55p0 = smoothstep(n_in55p0, n_out53p0, n_out54p0);


// Output:0
	COLOR.a = n_out55p0;


}
"
graph_offset = Vector2(-1622.13, -400.198)
mode = 1
flags/unshaded = true
flags/light_only = false
nodes/fragment/0/position = Vector2(1120, 320)
nodes/fragment/3/node = SubResource("VisualShaderNodeInput_q4o1x")
nodes/fragment/3/position = Vector2(-1120, -120)
nodes/fragment/6/node = SubResource("VisualShaderNodeUVFunc_p0yr5")
nodes/fragment/6/position = Vector2(-560, 40)
nodes/fragment/7/node = SubResource("VisualShaderNodeFloatParameter_ea4nj")
nodes/fragment/7/position = Vector2(-1280, 60)
nodes/fragment/8/node = SubResource("VisualShaderNodeVectorCompose_6xak5")
nodes/fragment/8/position = Vector2(-1040, 40)
nodes/fragment/9/node = SubResource("VisualShaderNodeTexture2DParameter_rl4q8")
nodes/fragment/9/position = Vector2(-160, 100)
nodes/fragment/11/node = SubResource("VisualShaderNodeTexture_1gu75")
nodes/fragment/11/position = Vector2(300, 0)
nodes/fragment/12/node = SubResource("VisualShaderNodeTexture2DParameter_bivho")
nodes/fragment/12/position = Vector2(-380, 860)
nodes/fragment/13/node = SubResource("VisualShaderNodeTexture_qs1q0")
nodes/fragment/13/position = Vector2(-40, 700)
nodes/fragment/27/node = SubResource("VisualShaderNodeSmoothStep_qs1q0")
nodes/fragment/27/position = Vector2(320, 620)
nodes/fragment/31/node = SubResource("VisualShaderNodeFloatParameter_1gu75")
nodes/fragment/31/position = Vector2(-700, 480)
nodes/fragment/36/node = SubResource("VisualShaderNodeInput_qs1q0")
nodes/fragment/36/position = Vector2(-1600, 780)
nodes/fragment/37/node = SubResource("VisualShaderNodeFloatFunc_1nl01")
nodes/fragment/37/position = Vector2(-1120, 800)
nodes/fragment/39/node = SubResource("VisualShaderNodeRemap_bivho")
nodes/fragment/39/position = Vector2(-660, 700)
nodes/fragment/40/node = SubResource("VisualShaderNodeVectorOp_1nl01")
nodes/fragment/40/position = Vector2(-840, 40)
nodes/fragment/41/node = SubResource("VisualShaderNodeFloatConstant_1gu75")
nodes/fragment/41/position = Vector2(-1040, 200)
nodes/fragment/42/node = SubResource("VisualShaderNodeFloatOp_qs1q0")
nodes/fragment/42/position = Vector2(-380, 560)
nodes/fragment/43/node = SubResource("VisualShaderNodeUVFunc_qs1q0")
nodes/fragment/43/position = Vector2(-160, -140)
nodes/fragment/44/node = SubResource("VisualShaderNodeInput_1nl01")
nodes/fragment/44/position = Vector2(-1400, -340)
nodes/fragment/45/node = SubResource("VisualShaderNodeFloatFunc_1gu75")
nodes/fragment/45/position = Vector2(-820, -300)
nodes/fragment/46/node = SubResource("VisualShaderNodeFloatFunc_bivho")
nodes/fragment/46/position = Vector2(-820, -200)
nodes/fragment/47/node = SubResource("VisualShaderNodeVectorCompose_vhiiu")
nodes/fragment/47/position = Vector2(-480, -140)
nodes/fragment/48/node = SubResource("VisualShaderNodeFloatOp_q4o1x")
nodes/fragment/48/position = Vector2(-1080, -320)
nodes/fragment/49/node = SubResource("VisualShaderNodeFloatOp_uste5")
nodes/fragment/49/position = Vector2(-1340, 780)
nodes/fragment/50/node = SubResource("VisualShaderNodeTexture_1nl01")
nodes/fragment/50/position = Vector2(280, -260)
nodes/fragment/51/node = SubResource("VisualShaderNodeUVFunc_1gu75")
nodes/fragment/51/position = Vector2(-160, -340)
nodes/fragment/52/node = SubResource("VisualShaderNodeVectorCompose_bivho")
nodes/fragment/52/position = Vector2(-480, -340)
nodes/fragment/53/node = SubResource("VisualShaderNodeFloatOp_vhiiu")
nodes/fragment/53/position = Vector2(540, -60)
nodes/fragment/54/node = SubResource("VisualShaderNodeRemap_qs1q0")
nodes/fragment/54/position = Vector2(580, 580)
nodes/fragment/55/node = SubResource("VisualShaderNodeSmoothStep_1nl01")
nodes/fragment/55/position = Vector2(860, 320)
nodes/fragment/56/node = SubResource("VisualShaderNodeFloatParameter_qs1q0")
nodes/fragment/56/position = Vector2(-1080, 540)
nodes/fragment/connections = PackedInt32Array(9, 0, 11, 2, 12, 0, 13, 2, 6, 0, 13, 0, 7, 0, 8, 0, 8, 0, 40, 0, 41, 0, 40, 1, 40, 0, 6, 1, 31, 0, 42, 0, 39, 0, 42, 1, 3, 0, 6, 0, 6, 0, 43, 0, 43, 0, 11, 0, 47, 0, 43, 1, 48, 0, 45, 0, 48, 0, 46, 0, 36, 0, 49, 0, 49, 0, 37, 0, 44, 0, 48, 0, 48, 0, 47, 1, 51, 0, 50, 0, 9, 0, 50, 2, 52, 0, 51, 1, 6, 0, 51, 0, 11, 1, 53, 1, 48, 0, 52, 0, 55, 0, 0, 1, 13, 1, 27, 2, 27, 0, 54, 0, 42, 0, 27, 0, 53, 0, 55, 1, 54, 0, 55, 2, 50, 1, 53, 0, 56, 0, 39, 0)

[sub_resource type="Gradient" id="Gradient_iotsf"]
offsets = PackedFloat32Array(0.2, 0.471483, 1)
colors = PackedColorArray(0.047418, 0.047418, 0.047418, 1, 0.252966, 0.252966, 0.252966, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_boyg6"]
gradient = SubResource("Gradient_iotsf")
width = 256
height = 256
fill = 1
fill_from = Vector2(0.4, 0.5)
fill_to = Vector2(0, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iotsf"]
resource_local_to_scene = true
shader = SubResource("VisualShader_mfdv2")
shader_parameter/aspect_ratio = 2.0
shader_parameter/hatching = ExtResource("5_e8heu")
shader_parameter/light_level = 0.2
shader_parameter/growth = 0.0
shader_parameter/center_circle = SubResource("GradientTexture2D_boyg6")

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_boyg6")
script = ExtResource("2_e36ub")
story = ExtResource("3_rvswv")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" parent="HBoxContainer" instance=ExtResource("4_hve3p")]
material = SubResource("ShaderMaterial_iotsf")
layout_mode = 2

[node name="SubtitleBox" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_type_variation = &"bigfont"
alignment = 1

[node name="MainMenu" parent="." instance=ExtResource("11_215e1")]
visible = false
layout_mode = 1
has_started = true

[node name="Intro" parent="." instance=ExtResource("15_rvswv")]
visible = false
layout_mode = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"Music"
script = ExtResource("17_xex6t")
music_list = Array[AudioStream]([ExtResource("18_aa0lp"), ExtResource("19_iu0sx"), ExtResource("11_mfdv2")])
